Global master ID

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"token":"","soundcloud":{"id":"","secret":""},"calling":"wind "}
+{"token":"","soundcloud":{"id":"","secret":""},"calling":"wind ", "masterID": ""}
